# SayuStock

./: .gitignore  .gitmodules  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
SayuStock/: __init__.py  version.py
SayuStock/stock_agent/: __init__.py
SayuStock/stock_ai/: __init__.py  draw_ai_map.py
SayuStock/stock_ai_func/: __init__.py  ai_tools.py
SayuStock/stock_analysis/: __init__.py  card.py  portfolio.py  render.py  screener.py  service.py  technical.py  universe.py
SayuStock/stock_cloudmap/: __init__.py  data.py  get_cloudmap.py  get_compare.py  get_vix.py  render.py  render_data.py  utils.py
SayuStock/stock_config/: config_default.py  stock_config.py
SayuStock/stock_help/: __init__.py  get_help.py  help.json
SayuStock/stock_info/: __init__.py  draw_fund_info.py  draw_future.py  draw_info.py  draw_info_pil.py  draw_my_info.py  get_jp_data.py
SayuStock/stock_news/: __init__.py
SayuStock/stock_papertrade/: PAPERTRADE_GUIDE.md  __init__.py  account_scope.py  admin.py  ai_tools.py  candidate_pool.py  commands.py  cross_group.py  db.py  indicators.py  matcher.py  permissions.py  proactive.py  (+6 more)
doc/: ai_development_guide.md  ai_tools.md  eastmoneyApi.md  interfaces_and_routes.md
docs/: ai_trigger_migration.md  papertrade.md
test/: kline_fixtures.py  single_stock_test.py  test_ai_text_delivery.py  test_dy_fix.py  test_indicators.py  test_intraday_align.py  test_papertrade_account_scope.py  test_papertrade_calendar.py  test_papertrade_candidate_pool.py  test_papertrade_indicators.py  test_papertrade_matcher.py  test_papertrade_strategy.py  test_render_text.py  test_stock_analysis_unit.py
(+44 files in other folders)
