[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pdm]
distribution = false
[tool.poetry]
name = "SayuStock"
version = "0.6"
description = "基于GsCore, 支持OneBot(QQ)、OneBotV12、QQ频道、微信、KOOK（开黑啦）、Telegram（电报）、FeiShu（飞书）、DoDo、Discord的全功能HoshinoBot/NoneBot2/Koishi/yunzai/ZeroBot股票/A股机器人插件（大盘云图等）"
authors = ["KimigaiiWuyi <444835641@qq.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/KimigaiiWuyi/SayuStock"
repository = "https://github.com/KimigaiiWuyi/SayuStock"
documentation = "https://docs.sayu-bot.com/"
packages = [{ include = "SayuStock" }]
exclude = ["tests", "deploy"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/KimigaiiWuyi/SayuStock/issues"

[tool.pyright]
disableBytesTypePromotions = false

[tool.basedpyright]
deprecateTypingAliases = false

[project]
name = "SayuStock"
version = "0.2"
description = "基于GsCore, 支持OneBot(QQ)、OneBotV12、QQ频道、微信、KOOK（开黑啦）、Telegram（电报）、FeiShu（飞书）、DoDo、Discord的全功能HoshinoBot/NoneBot2/Koishi/yunzai/ZeroBot股票/A股机器人插件（大盘云图等）"
authors = [
  { name = "KimigaiiWuyi", email = "444835641@qq.com" },
]
dependencies = [
  "playwright>=1.49.0",
  "plotly>=5.24.1",
  "pandas>=2.2.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }